--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.5",
     "three": "^0.160.0",
     "three-collada-loader": "^0.0.1",
+    "three-orbit-controls": "^82.1.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
