--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "three": "^0.160.0",
     "three-collada-loader": "^0.0.1",
     "three-orbit-controls": "^82.1.0",
