--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.7",
     "three": "^0.160.0",
     "three-collada-loader": "^0.0.1",
     "three-orbit-controls": "^82.1.0",
