--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "save": "^2.9.0",
     "sqlite3": "^5.1.6"
