--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "save": "^2.9.0",
     "sqlite3": "^5.1.6"
