--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "three": "^0.160.0",
     "three-collada-loader": "^0.0.1",
     "three-orbit-controls": "^82.1.0",
+    "uuid": "^9.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
